# RAGChecker

./: README.md  checking.py  pyproject.toml  requirements.txt  result.txt
.github/workflows/: release.yml
data/benchmark/: README.md  data_process.sh  process_bioasq.py  process_clapnq.py  process_fiqa.py  process_kiwi.py  process_lotte.py  process_novelqa.py
data/benchmark/metadata/: bioasq_doc_indices.json  bioasq_queries_metadata.json  clapnq_ids.json  fiqa_metadata.json  kiwi_question_ids.json  lifestyle_doc_indices.json  lifestyle_qid2gt.json  recreation_doc_indices.json  recreation_qid2gt.json  science_doc_indices.json  science_qid2gt.json  technology_qid2gt.json  writing_doc_indices.json  writing_qid2gt.json
data/benchmark/processed_data/novelqa/: novelqa_queries.json
data/meta_evaluation/: README.md  baseline_ragchecker.json  human_labeled_data.json  meta_eval.py
examples/: checking_inputs.json  checking_outputs.json  run.sh
rag_baselines/: chunking.py  embedding.py  format_bedrock_corpus.py  generation.py  indexing.py  opensearch_client.py  retrieval.py
rag_baselines/scripts/: run_chunking.sh  run_generation.sh  run_indexing.sh  run_retrieval.sh
ragchecker/: __init__.py  checking.py  cli.py  computation.py  container.py  evaluator.py  metrics.py  rag_eval.py
ragchecker/integrations/: llama_index.py
scripts/: synthesize_benchmark.py
tutorial/: ragchecker_tutorial_en.md  ragchecker_tutorial_zh.md
